--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.12"
 pandas = "^2.2.0"
 numpy = "^1.26.4"
+pyodbc = "^5.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
