--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 pandas = "^2.2.0"
 numpy = "^1.26.4"
 pyodbc = "^5.1.0"
+loguru = "^0.7.2"
 
 
 [tool.poetry.group.dev.dependencies]
