--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pandas = "^2.2.0"
 numpy = "^1.26.4"
 pyodbc = "^5.1.0"
 loguru = "^0.7.2"
+tqdm = "^4.66.2"
 
 
 [tool.poetry.group.dev.dependencies]
