--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ loguru = "^0.7.2"
 tqdm = "^4.66.2"
 matplotlib = "^3.8.3"
 scikit-learn = "^1.4.1.post1"
+seaborn = "^0.13.2"
 
 
 [tool.poetry.group.dev.dependencies]
