--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ tqdm = "^4.66.2"
 matplotlib = "^3.8.3"
 scikit-learn = "^1.4.1.post1"
 seaborn = "^0.13.2"
+apriori-python = "^1.0.4"
+apyori = "^1.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
